<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">%1$s requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_android_wear_update_text">%1$s won\'t run unless you update the Android Wear app.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="app_name">OTA Beta Updates</string>
    <string name="prop_name">ro.ota.romname</string>
    <string name="app_version">2.5.3b</string>
    <string name="changelog_url">https://raw.githubusercontent.com/MatthewBooth/OTAUpdates/stable/Changelog.md</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="loading">Loading…</string>
    <string name="filename_separator">-</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="downloading">Downloading…</string>
    <string name="rebooting">Rebooting…</string>
    <string name="information">Information</string>
    <string name="update_available">ROM Beta update available</string>
    <string name="ignore">Ignore</string>
    <string name="donate">Donate</string>
    <string name="finished">Finished</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="delete_confirm">Are you sure you want to delete this file?</string>
    <string name="about_about_title">About</string>
    <string name="about_preferences_summary">OTAUpdates information, donation and credits</string>
    <string name="about_about_summary">This app was born out of my frustration of using other apps that didn\'t work how I wanted them to. I developed it for my ROM, but quickly realised other developers might find this useful as well. As a result, I generalised it and wrote up some implementation guides for other developers to use.</string>
    <string name="about_credits_title">Credits</string>
    <string name="about_credits_summary">Credits Summary</string>
    <string name="about_donate_title">Donate</string>
    <string name="about_donate_summary">If this app has made your life easier, please consider a donation to the app developer (Kryten2k35)</string>
    <string name="about_donate_button_summary">Grab me a beer</string>
    <string name="about_version_title">Version</string>
    <string name="about_app_version">App version:</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">View the app\'s changelog</string>
    <string name="changelog_error">Error reading changelog</string>
    <string name="addons_created_on">Created:</string>
    <string name="addons_updated_on">Updated:</string>
    <string name="ad_activity_main">ca-app-pub-1094770210220666/4170147370</string>
    <string name="ad_activity_about">ca-app-pub-1094770210220666/8541471376</string>
    <string name="available_update_name">Update name and file info here</string>
    <string name="available_progress_counter">0MB / 0MB</string>
    <string name="available_changelog_title">Changelog</string>
    <string name="available_changelog_content">Your Changelog goes here</string>
    <string name="available_md5">MD5:</string>
    <string name="available_check_md5">Check MD5</string>
    <string name="available_ready_to_install">Ready to install</string>
    <string name="available_md5_ok">MD5 Passed</string>
    <string name="available_md5_failed">MD5 Failed</string>
    <string name="available_checking_md5">Checking MD5…</string>
    <string name="available_downloading">Downloading…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="available_delete_confirm_message">Are you sure you want to delete the downloaded file?</string>
    <string name="available_reboot_confirm">Would you like to reboot now?</string>
    <string name="available_url_error">URL Error: Please see your ROM developer</string>
    <string name="available_reboot_manual_title">Please reboot now</string>
    <string name="available_reboot_manual_message">Please reboot to recovery and flash your ROM.\n\nYou can find it in /sdcard/Downloads</string>
    <string name="available_wrong_network_title">Wrong network selected</string>
    <string name="available_wrong_network_message">You are trying to download over your mobile network, and the settings only allow Wi-Fi. Please change the settings accordingly.</string>
    <string name="main_update_available">Update Available!</string>
    <string name="main_update_finished">Download complete</string>
    <string name="main_no_update_available">No Update Available</string>
    <string name="main_update_filename">Filename</string>
    <string name="main_update_progress">Download Progress</string>
    <string name="main_website">Website</string>
    <string name="main_website_summary">Visit ROM website</string>
    <string name="main_donate">Donate</string>
    <string name="main_donate_summary">Donate to the ROM developer</string>
    <string name="main_tap_to_download">Tap to download</string>
    <string name="main_download_completed_details">Tap for details</string>
    <string name="main_tap_to_view_progress">Tap to view progress</string>
    <string name="main_addon">Addons</string>
    <string name="main_addon_summary">Browse and download additional files for this ROM</string>
    <string name="main_rom_information">ROM information</string>
    <string name="main_rom_name">ROM name:</string>
    <string name="main_rom_version">ROM version:</string>
    <string name="main_rom_build_date">ROM date:</string>
    <string name="main_android_verison">Android version:</string>
    <string name="main_rom_developer">Developer(s):</string>
    <string name="main_dev_website_icon">Developer Website Icon</string>
    <string name="list_summary">%s</string>
    <string name="twrp_ors_cat">OpenRecoveryScript</string>
    <string name="twrp_ors_title">Enable OpenRecoveryScript</string>
    <string name="twrp_ors_summary">Works for TWRP and some custom CWM (not official) recoveries</string>
    <string name="twrp_ors_information">Enables this app to flash the file via recovery without any interaction needed from the user. Just hit install and wait for it to finish.</string>
    <string name="twrp_ors_install_prefs">Install preferences</string>
    <string name="twrp_ors_install_prefs_summary">Choose some install preferences to use when using the ORS script</string>
    <string name="notifications_title">Notifications</string>
    <string name="background_service_summary">Automatically check for updates and show a notification if one is available</string>
    <string name="background_frequency">Update check frequency</string>
    <string name="mobile_wifi_network">Network</string>
    <string name="mobile_wifi_title">Update over network</string>
    <string name="theme">Theme</string>
    <string name="notifications_sound">Sound</string>
    <string name="notifications_vibrate">Vibrate</string>
    <string name="notification_ignore_release_title">Ignore release</string>
    <string name="ads_cat">Advertisements</string>
    <string name="ads_enable">Enabled ads</string>
    <string name="ads_summary_on">Consider leaving advertisements enabled to support further development of the app</string>
    <string name="ads_summary_off">Consider enabling advertisements enabled to support further development of the app</string>
    <string name="storage">Storage</string>
    <string name="storage_location">Storage location</string>
</resources>