<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res-auto" card_view:cardCornerRadius="@dimen/card_view_radius" card_view:cardElevation="@dimen/shadow_height" card_view:cardUseCompatPadding="true" style="?attr/cardStyle">
    <LinearLayout card_view:orientation="vertical" card_view:paddingLeft="16dp" card_view:paddingRight="16dp" card_view:clickable="false" card_view:layout_width="match_parent" card_view:layout_height="wrap_content" style="@style/MainListElement">
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010041" card_view:textColor="?attr/textColorPrimary" card_view:id="@+id/tv_main_rom_information" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_rom_information" />
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:id="@+id/tv_main_rom_name" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_rom_name" />
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:id="@+id/tv_main_rom_version" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_rom_version" />
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:id="@+id/tv_main_rom_date" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_rom_build_date" />
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:id="@+id/tv_main_android_version" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_android_verison" />
        <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:id="@+id/tv_main_rom_developer" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_rom_developer" />
    </LinearLayout>
</android.support.v7.widget.CardView>
