<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res-auto" card_view:id="@+id/layout_main_addons" card_view:cardCornerRadius="@dimen/card_view_radius" card_view:cardElevation="@dimen/shadow_height" card_view:cardUseCompatPadding="true" style="?attr/cardStyle">
    <LinearLayout card_view:layout_width="match_parent" card_view:layout_height="wrap_content" card_view:onClick="openAddons" style="@style/MainListElement">
        <ImageView card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:layout_marginRight="16dp" card_view:src="?attr/addonsIcon" card_view:contentDescription="@string/main_dev_website_icon" card_view:layout_marginEnd="16dp" />
        <LinearLayout card_view:orientation="vertical" card_view:layout_width="match_parent" card_view:layout_height="wrap_content">
            <TextView card_view:textAppearance="?unknown_attr_ref: 1010041" card_view:textColor="?attr/textColorPrimary" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_addon" />
            <TextView card_view:textAppearance="?unknown_attr_ref: 1010042" card_view:textColor="?attr/textColorSecondary" card_view:layout_width="wrap_content" card_view:layout_height="wrap_content" card_view:text="@string/main_addon_summary" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
